User Database and basic homepage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,12 @@
     <string name="app_name">WhatsCookin</string>
     <string name="facebook_app_id">2095683097341771</string>
     <string name="fb_login_protocol_scheme">fb2095683097341771</string>
+    <string name="title_activity_homepage">HomepageActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Log Out</string>
 
 </resources>
